[package]
name = "lox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.13", features = ["derive"] }
lazy_static = "1.5.0"
peg = "0.8.3"
thiserror = "1.0.38"                             # error handling
